# SystemsProgramming

./: .gitignore  coursework.txt
.ccls-cache/@@home@ben@Documents@git repositories@SystemsProgramming/: @home@ben@ccls@clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04@lib@clang@8.0.0@include@limits.h.blob  @home@ben@ccls@clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04@lib@clang@8.0.0@include@stdarg.h.blob  @home@ben@ccls@clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04@lib@clang@8.0.0@include@stdbool.h.blob  @home@ben@ccls@clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04@lib@clang@8.0.0@include@stddef.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@ctype.h.blob  @usr@include@endian.h.blob  @usr@include@errno.h.blob  @usr@include@features.h.blob  @usr@include@limits.h.blob  @usr@include@linux@errno.h.blob  @usr@include@linux@limits.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@x86_64-linux-gnu@asm@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@_G_config.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap-16.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  (+41 more)
Prog/: .clang_complete  tags
Prog/example/: gameoflife.c
Prog/src/: CMakeLists.txt  gameoflife.c
Prog/src/libgol/: CMakeLists.txt  gol.c  gol.h
(+108 files in other folders)
