cmake_minimum_required(VERSION 3.10)
project(GameOfLife)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -pedantic -std=c11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(LEAK OFF)
option(LEAK "check for memory leaks" OFF)
if(LEAK)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
endif(LEAK)
add_subdirectory(libgol)
add_executable(GameOfLife gameoflife.c)
target_link_libraries(GameOfLife PUBLIC gol)
